# Ecommerce_Backend/src/modules/Checkouts/controllers/checkout.controller.ts
@@ -1,5 +1,15 @@
+import { Request, Response } from 'express'
+import { HttpStatusCode } from '~/base/common/enums'
+import { checkoutSchema } from '~/modules/Checkouts/dtos'
+import { CheckoutService } from '~/modules/Checkouts/services'
 export class CheckoutController {
-  static async checkOutReview() {}
+  static checkOutReview = async (req: Request, res: Response) => {
+    const dto = checkoutSchema.parse(req.body)
+    res.status(HttpStatusCode.OK).json({
+      message: 'Checkout successfully',
+      ...(await CheckoutService.checkOutReview(dto))
+    })
+  }
   static async orderByUser() {}
   static async getOrdersByUser() {}
   static async getOneOrderByUser() {}
