# Ecommerce_Backend/src/modules/Checkouts/dtos/checkout-query.dto.ts
@@ -1,25 +1,0 @@
-  /*
-        {
-            cartId, 
-            userId,
-            shop_order_ids [
-                {
-                    shop_id,
-                    shop_discount: [
-                        {
-                            shopId,
-                            discountId,
-                            codeId
-                        }
-                    ],
-                    item_product: [
-                        {
-                            price,
-                            quantity,
-                            productId,
-                        }
-                    ]
-                },
-            ]
-        }
-    */
