# Ecommerce_Backend/src/modules/Checkouts/dtos/index.ts
@@ -1,0 +1,1 @@
+export * from './checkout.dto'
